--- a/styles/global.css
+++ b/styles/global.css
@@ -57,12 +57,21 @@ img{
 .container{
     max-width: 1280px;
     padding-inline: 32px;
-    margin-inline: 0 auto;
+    margin-inline: auto;
 }
 
 main{
     margin-top: 40px;
-    gap: 80px;
+    row-gap: 80px;
+    column-gap: 32px;
+
+    grid-template-columns: 2fr 1fr;
+
+    grid-template-areas:
+     "featured featured"
+     "semana semana"
+     "ai aside" 
+    ;
 }
 
 
